--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.1.0",
+    "node-schedule": "^2.1.1",
     "twilio": "^4.11.0"
   },
   "devDependencies": {
